--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -104,7 +104,7 @@ jobs:
       # Fix for License Error
       - name: Accept Android Licenses
         run: |
-          yes | flutter doctor --android-licenses
+          Y | flutter doctor --android-licenses
 
       - name: Build APK
         run: flet build apk --verbose
