--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ authors = [
 ]
 dependencies = [
     "flet",
-    "requests",
-    "geoip2"
+    "requests"
 ]
 requires-python = ">=3.9"
 
@@ -22,4 +21,5 @@ copyright = "Copyright (C) 2025 PSG"
 path = "src"
 
 [tool.flet.windows]
+
 icon = "assets/icon.png"
