--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -21,7 +21,6 @@ jobs:
   build-windows:
     runs-on: windows-latest
     env:
-      # CRITICAL: Forces Python to use UTF-8 for IO to prevent 'charmap' errors with Flet's progress bar
       PYTHONIOENCODING: utf-8
       PYTHONUTF8: 1
       PYTHONLEGACYWINDOWSSTDIO: utf-8
@@ -44,10 +43,23 @@ jobs:
         with:
           channel: stable
 
+      # --- TRICK: Add geoip2 ONLY for Windows ---
+      - name: Inject GeoIP2 into pyproject.toml
+        shell: pwsh
+        run: |
+          $file = "pyproject.toml"
+          $content = Get-Content $file
+          # Find the dependencies line and add geoip2
+          $newContent = $content -replace '"requests"', '"requests", "geoip2"'
+          Set-Content $file $newContent
+          
+          # Verify change
+          Write-Host "Modified pyproject.toml dependencies:"
+          Get-Content $file | Select-String "dependencies" -Context 0, 5
+
       - name: Build Windows EXE
         shell: pwsh
         run: |
-          # Double check: Force console to UTF-8
           [Console]::OutputEncoding = [System.Text.Encoding]::UTF8
           flet build windows --verbose
 
@@ -55,14 +67,9 @@ jobs:
         shell: pwsh
         run: |
           $buildDir = "build\windows"
-          
-          # Copy external assets next to the EXE
           Copy-Item -Path "src\channelsData" -Destination $buildDir -Recurse
           Copy-Item -Path "src\templates" -Destination $buildDir -Recurse
           Copy-Item -Path "src\settings.json" -Destination $buildDir
-
-          Write-Host "Verifying Build Content:"
-          Get-ChildItem -Path $buildDir
 
       - name: Zip Windows Build
         uses: thedoctor0/zip-release@0.7.6
